fixed li spacing

--- a/styles/style.css
+++ b/styles/style.css
@@ -281,7 +281,7 @@ section {
     position: relative;
     left: 5%;
     padding-left: 38px;
-    padding-right: 48px;
+    padding-right: 85px;
     font-family: 'Lato', sans-serif;
     font-weight: 700;
     line-height: 1.4rem;
@@ -328,7 +328,7 @@ top: 0;
 
 .menuSection .noSpace li {
     padding-left: 0;
-    padding-right: 0;
+    padding-right: 10px;
 }
 
 .menuSection .noSpace .red {
@@ -391,7 +391,7 @@ top: 0;
     padding-left: 30px;
     font-weight: 700;
     line-height: 1.1rem;
-    font-size: .8rem;
+    font-size: .9rem;
     }
 
 }
